Add images and style settings

--- a/entrada.html
+++ b/entrada.html
@@ -37,7 +37,7 @@
         
         <div class="entrada">
             <div class="entrada__imagen">
-                <img src="/img/blog1.jpg" alt="entrada del blog">
+                <img src="/img/blog1.webp" alt="entrada del blog">
             </div>
             <div class="entrada__texto">
                 <p>
